--- a/booke.html
+++ b/booke.html
@@ -12,7 +12,7 @@
         <div class="container">
             <div class="element element2">
                  <section>
-                      <a href="Untitled-1.html" class="button-small button-circle">retour</a>
+                      <a href="index.html" class="button-small button-circle">retour</a>
                  </section>
             </div>
             <div class="element1 element1">BOOOOOOOOOOOOOOOOOOOOOOOOOOOKE‎ ‎ ‎ ‎ ‎ </div>
@@ -20,4 +20,5 @@
             <p style="float:left"><img src="boooooke original.jpg" alt="soeur de BOKE" width=230% height=150%/> </p>
             <p class="texte"><br>Boke, le fils de la famille, avait toujours été l’esclave de la maisonnée. En creusant dans ses vieux cahiers de lycée, la famille découvre ses premiers essais de se faire respecter.<br> Inspiré par ces débuts, Boke décide d'organiser une soirée de stand-up dans son quartier. Il partage des anecdotes sur ses expériences en tant que membre de la famille Boke, ajoutant une touche personnelle à ses récits comiques. Il finit la soirée plein de tomate et rentre chez lui déprimé. Il finira par travailler chez McDo.</p>
      </body>
+
 </html>
