--- a/maman.html
+++ b/maman.html
@@ -12,7 +12,7 @@
         <div class="container">
             <div class="element element2">
                  <section>
-                      <a href="Untitled-1.html" class="button-small button-circle">retour</a>
+                      <a href="index.html" class="button-small button-circle">retour</a>
                  </section>
             </div>
             <div class="element1 element1">La maman de Boke ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ </div>
@@ -20,4 +20,5 @@
             <p style="float:left"><img src="maman de boke.jpeg" alt="soeur de BOKE" width=200% height=200%/> </p>
             <p class="texte"><br>La mère, une chef passionnée, avait auparavant rêvé de devenir une célèbre chef de cuisine. Alors qu'elle participe à un concours de cuisine télévisé, elle se rappelle comment elle avait travaillé dans des petits restaurants pittoresques pour financer ses études culinaires.<br> Son secret pour réussir la compétition ? Improviser avec des ingrédients inhabituels, une compétence qu'elle avait développée au fil de ses années passées à créer des plats douteux avec des moyens limités et des ingrédients toujours plus loufoques. Elle fut l’inventeuse de la pizza à l’ananas.</p>
      </body>
+
 </html>
