--- a/mamie.html
+++ b/mamie.html
@@ -12,7 +12,7 @@
         <div class="container">
             <div class="element element2">
                  <section>
-                      <a href="Untitled-1.html" class="button-small button-circle">retour</a>
+                      <a href="index.html" class="button-small button-circle">retour</a>
                  </section>
             </div>
             <div class="element1 element1">La Mamie de Boke ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ </div>
@@ -21,5 +21,6 @@
             <p class="texte"><br>Mamie Gertrude, une ancienne professeure de danse, a toujours été passionnée par l'art du mouvement. Dans sa jeunesse, elle a fait partie d'un groupe de danse avant-gardiste, célèbre pour ses performances avant-gardistes. <br>Plus tard dans la vie, elle décide de revisiter ses jours de gloire en se lançant dans un concours de danse pour seniors. En tant que membre de la troupe "Les Jambes Folles", elle émerveille le public avec ses pas dynamiques et son charme rétro, rappelant avec nostalgie ses jours de jeunesse.</p>
      </body>
 </html>
+
 
 
