--- a/mamie2.html
+++ b/mamie2.html
@@ -12,7 +12,7 @@
         <div class="container">
             <div class="element element2">
                  <section>
-                      <a href="Untitled-1.html" class="button-small button-circle">retour</a>
+                      <a href="index.html" class="button-small button-circle">retour</a>
                  </section>
             </div>
             <div class="element1 element1">La deuxième mamie de Boke‎ ‎ ‎ ‎ ‎ ‎ ‎ </div>
@@ -20,4 +20,5 @@
             <p style="float:left"><img src="mamie 2 de boke.jpg" alt="soeur de BOKE" width=150% height=150%/> </p>
             <p class="texte"><br>Mamie Edith, une ancienne botaniste de renom, découvre sa passion pour la peinture lors de ses expéditions à travers le monde. <br>Elle a toujours esquissé des croquis de la flore exotique qu'elle rencontrait. Un jour, elle retrouve son vieux carnet de croquis et décide de donner vie à ses dessins dans son jardin.<br> Les fleurs et les plantes deviennent des personnages colorés dans sa toile vivante. Cette passion cachée pendant des décennies éclate au grand jour lorsque la ville organise une exposition pour mettre en valeur son talent artistique insoupçonné.</p>
      </body>
+
 </html>
