--- a/papi2.html
+++ b/papi2.html
@@ -12,7 +12,7 @@
         <div class="container">
             <div class="element element2">
                  <section>
-                      <a href="Untitled-1.html" class="button-small button-circle">retour</a>
+                      <a href="index.html" class="button-small button-circle">retour</a>
                  </section>
             </div>
             <div class="element1 element1">La JARRE du Papi de Boke‎ ‎ ‎ ‎ ‎ ‎ ‎ </div>
@@ -20,4 +20,5 @@
             <p style="float:left"><img src="papi-2-de-boke.png" alt="soeur de BOKE" width=260% height=150%/> </p>
             <p class="texte"><br>Papi Albert, le patriarche regretté de la famille Boke, était autrefois un inventeur passionné. Alors que la famille explore les recoins poussiéreux du grenier, ils tombent sur un étrange cahier rempli de schémas et de notes folles.<br> Il s'avère que Papi Albert avait toujours rêvé de construire une machine à remonter le temps. Bien sûr, personne ne l'avait pris au sérieux à l'époque et il avait bien raison, car Papi Albert était con. <br> <br> pseudo : bockale</p>
      </body>
+
 </html>
