--- a/soeur.html
+++ b/soeur.html
@@ -12,7 +12,7 @@
         <div class="container">
             <div class="element element2">
                  <section>
-                      <a href="Untitled-1.html" class="button-small button-circle">retour</a>
+                      <a href="index.html" class="button-small button-circle">retour</a>
                  </section>
             </div>
             <div class="element1 element1">La soeur de Boke‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ </div>
@@ -23,5 +23,6 @@
             <p class="texte"><br>Gertrude Boke, la sœur de Boke, était toujours considérée comme une énigme dans la famille. Contrairement à la famille Boke, connue pour son excentricité, Gertrude avait grandi avec une passion secrète : les concours de beauté. <br>Cependant, il y avait un défi de haute importance : elle était moche en raison de son apparence physique et de sa forte corpulence. Un jour, Gertrude décide de suivre son rêve et de participer à un concours local de beauté. Malgré les doutes de sa famille, elle s'inscrit, déterminée à briser les stéréotypes de beauté. Pour se préparer, elle embrasse sa propre singularité, créant des tenues uniques et colorées qui reflètent sa personnalité pétillante. <br> Lors du concours, Gertrude fait une entrée fracassante due à son poids qui a cassé la scène, portant fièrement sa tenue excentrique et affichant un sourire éclaté. Les juges et le public sont immédiatement répugnés par son corps de Jabba. Gertrude gagne le droit, voire l’obligation, de rentrer chez elle.</p>
      </body>
 </html>
+
 
 
